--- a/index.html
+++ b/index.html
@@ -56,6 +56,27 @@
                 </div>
             </div>
         </section>
+        <!-- About: Solutions -->
+        <section class="solutions flex-columns">
+            <div class="row">
+                <div class="column">
+                    <div class="column-1">
+                        <img src="./images/home/people.jpg" alt="">
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="column-2 bg-primary">
+                        <h4>What you are looking for</h4>
+                        <h2>We provide Bespoke solutions</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, recusandae ipsum perferendis nulla hic accusamus delectus sapiente impedit quae, vitae in ab doloremque.</p>
+                        <a href="#" class="btn btn-outline">
+                            <i class="fas fa-chevron"></i>
+                            Read More
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
