Added some JavaScript to hide the navbar when you scroll

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header id="main-header">
-        <div class="navbar" id="navbar">
+        <div class="navbar top" id="navbar">
             <h1 class="logo"><span class="text-primary"><i class="fas fa-book-open"></i>Edge</span>Ledger</h1>
             <nav>
                 <ul>
@@ -78,5 +78,6 @@
             </div>
         </section>
     </main>
+    <script src="./js/main.js"></script>
 </body>
 </html>
